Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2012-06-05 (SVN):
    * utils: Renamed GetTime to COM_GetTime and Error to COM_Error so as
      not to run into possible clashes with any library functions (such
      as the case with Error and Amiga's proto/dos.h). Also replaced the
      calls to remove and rename by Q_unlink and Q_rename.

2012-06-05 (SVN):
    * sys_amiga.c: Added -sndahi to the clients' help strings.

2012-06-05 (SVN):
    * sys_amiga.c (Sys_Init): Removed 1ms Sys_Sleep after the timer init
      and inlined a 1us wait, instead. Added missing timer init stuff to
      hexenworld server and utils/cmdlib so that GetSysTime can be used.

2012-06-04 (SVN):
    * snd_ahi.c, sys_amiga.c: Changed several ULONG type usage into IPTR
      for 64 bits corectness.

2012-06-04 (SVN):
    * snd_timidity.c, snd_wildmidi.c (_InitHelper): Added kludge so that
      the resulting path doesn't have ":/" or "//", which have different
      meaning on amiga. This can actually be made into a new Sys_ or FS_
      CatTo[Base|User]path() helper procedure later and all prints using
      fs_basedir, fs_userdir, etc can be made through it. Well, later..
      While we are there, added "Timidity:" to cfgfile[] of timidity and
      wildmidi.

2012-06-04 (SVN):
    * snd_ahi.c updates from Szilard Biro: -sndbits and -sndmono command
      line arguments are now honored. BUFFER_SIZE is now 16384 for AROS
      and MorphOS and 2048 for others. Made sure that shm->buffer isn't
      set to anything other than NULL if the driver fails.

2012-06-04 (SVN):
    * Made snd_mix.c to support 8 bit signed output. S8 mode is used by
      the Amiga AHI backend which doesn't support U8, at least not when
      running stereo: ahi.h lists AHIST_M8U (obsolete) but no AHIST_S8U.

2012-06-04 (SVN):
    * snd_ahi.c (EffectFunc): Fixed shadowing of the file-scoped ad
      variable. Made file-scoped ad pointer static.

2012-06-04 (SVN):